2010-03-13 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: removed lib/src/z80/*.c from the package
	* src/z80/gen.c: fixed warning: suggest parentheses around assignment
	  used as truth value
	* sdas/asxxsrc/sdas.c: fixed warning: implicit declaration of function
	  'tolower'

2009-03-11 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f616.h,
	  device/include/pic/pic16hv616.h,
	  device/lib/pic/libdev/devices.txt,
	  device/lib/pic/libdev/pic16f616.c,
	  device/lib/pic/libdev/pic16hv616.c:
	  add support for 16f616 and 16hv616 devices

2010-03-09 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/printf.c:
	  Made gbz80 port use the generic printf routine family.

2010-03-07 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c,
	  support/regression/tests/float_single.c:
	  gbz80 port regression test fixes.

2010-03-06 Borut Razem <borut.razem AT siol.net>

	* src/hc08/main.c: fixed hc08 target:
	  reintroduced MODAL_SMALL and MODEL_LARGE

2010-03-04 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/port.h, src/avr/main.c, src/ds390/main.c,
	  src/hc08/main.c, src/mcs51/main.c, src/pic16/main.c, src/pic/main.c,
	  src/xa51/main.c, src/z80/main.c: get_model() moved to the traget
	* src/mcs51/rtrack.c: removed MSVC warnings:
	  integral size mismatch in argument; conversion supplied
	* src/SDCCglobl.h: introduced NO_MODEL

2010-03-03 Borut Razem <borut.razem AT siol.net>

	* all.dsp: added makebin to project
	* src/SDCCmain.c: fixed lib suffix,
	  get_lib_suffix() renamed to get_model(),
	  added pic* handling to get_model()

2010-03-02 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/pic/main.c, src/pic16/main.c:
	  lib suffix is a part of lib dir set
	* support/scripts/Makefile.in, support/scripts/clean.mk:
	  added clean Makefile target for scripts

2010-03-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c(get_lib_suffix): added huge model
