@@ -236,7 +236,7 @@ main(argc, argv)
 int argc;
 char *argv[];
 {
-	char *p, *q;
+	char *p, *q = NULL;
 	int c, i;
 	struct area *ap;
 
